// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`generateDocsForClass() Function should generate documentation correctly 1`] = `
"# Type \`MockedClass\`

type 'MockedClass'.

## Fields

- [test](#test)
- [test2](#test2)


### \`test\`

| Name        | Description |
| ----------- | ----------- |
| Type        | Boolean     |
| Nullable    | ❌ No        |
| Description | test        |



### \`test2\`

| Name        | Description |
| ----------- | ----------- |
| Type        | Boolean     |
| Nullable    | ✔️ Yes      |
| Description | test        |


"
`;

exports[`generateDocsForClass() Function should generate documentation correctly with nested fields 1`] = `
"# Type \`MockedClass2\`

type 'MockedClass2'.

## Fields

- [test](#test)


### \`test\`

| Name        | Description                      |
| ----------- | -------------------------------- |
| Type        | [MockedClass](#type-mockedclass) |
| Nullable    | ❌ No                             |
| Description | test                             |



## Type \`MockedClass\`

type 'MockedClass'.

### Fields

- [test](#test)
- [test2](#test2)


#### \`test\`

| Name        | Description |
| ----------- | ----------- |
| Type        | Boolean     |
| Nullable    | ❌ No        |
| Description | test        |



#### \`test2\`

| Name        | Description |
| ----------- | ----------- |
| Type        | Boolean     |
| Nullable    | ✔️ Yes      |
| Description | test        |


"
`;

exports[`generateDocsForClass() Function should not generate documentation for circular references 1`] = `
"# Type \`MockedClass\`

test

## Fields

- [test](#test)


### \`test\`

| Name        | Description                    |
| ----------- | ------------------------------ |
| Type        | [ChildClass](#type-childclass) |
| Nullable    | ❌ No                           |
| Description | test                           |



## Type \`ChildClass\`

test

### Fields

- [childField](#childfield)
- [field](#field)


#### \`childField\`

| Name        | Description            |
| ----------- | ---------------------- |
| Type        | String                 |
| Nullable    | ❌ No                   |
| Description | This is a child field. |



#### \`field\`

| Name        | Description                    |
| ----------- | ------------------------------ |
| Type        | [ChildClass](#type-childclass) |
| Nullable    | ❌ No                           |
| Description | test                           |


"
`;
